Fix initial label alignment in Chrome. References #47.

--- a/public/css/one.css
+++ b/public/css/one.css
@@ -393,6 +393,7 @@ input[type="text"] {
 {
   color: #bbc4d7;
   cursor: text;
+  display: block;
   padding-top: 12px;
   position: absolute;
   width: 254px;
